redone maven source/resource path add file

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,12 @@
                 </configuration>
             </plugin>
         </plugins>
-        <testSourceDirectory>src</testSourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>src/resources</directory>
+            </testResource>
+        </testResources>
     </build>
 
     <dependencies>
